force-app/main/default/objects/Exact_Target_LogIn__c/Exact_Target_LogIn__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Exact Target LogIn</label>
</CustomObject>