force-app/main/default/objects/Exact_Target_LogIn__c/fields/BulkSSSWBatchSize__c.field-meta.xml
<CustomField>
    <fullName>BulkSSSWBatchSize__c</fullName>
    <label>Bulk SSSW Case Send Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>