force-app/main/default/objects/Exact_Target_LogIn__c/fields/Message_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Message_EndPoint__c</fullName>
    <label>Message EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>