force-app/main/default/objects/Exact_Target_LogIn__c/fields/RequestToken_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>RequestToken_EndPoint__c</fullName>
    <label>RequestToken EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>